create github pages

--- a/pactos.html
+++ b/pactos.html
@@ -51,7 +51,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>PACTOS CON EL DIABLO</strong></h1>
                 <p class="mbr-text mbr-fonts-style display-7">¿Como cambiaria su situación si pudieras resolver todos tus problemas?<br><br>Si nos contactas ahora mismo le mostraremos como puede tener una nueva vida haciendo un poderoso pacto con el diablo.<br><br><br></p>
                 <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-4" href="https://contacto.guru/Lin1" target="_blank"><span class="socicon socicon-whatsapp mbr-iconfont mbr-iconfont-btn"></span>CONTACTAR AHORA!&nbsp;</a></div>
-                <img class="w-100" src="assets/images/alkonmafio-baphomet-50-mm-ultra-realista-enfoque-ntido-ojos-de-cac53f0b-d25b-4d84-9ba8-8f18bfa9c48a-1024x1024.png" alt="">
+                <img class="w-100" src="assets/images/p-58-1024x1024.png" alt="">
             </div>
         </div>
     </div>
@@ -100,7 +100,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="col-12 col-lg-5 col-img">
                 <div class="img-wrapper">
                     <div class="img-box">
-                        <img src="assets/images/alkonmafio-old-shamans-of-the-amazon-performing-a-satanic-ritua-000ef702-8b3d-4803-a552-97d33665e6df-960x960.png" alt="">
+                        <img src="assets/images/c-14-960x960.png" alt="">
                     </div>
                     
                 </div>
@@ -129,7 +129,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="shadow">
                     <div class="row people">
                         <div class="wrap-img col-auto">
-                            <img src="assets/images/alkonmafio-mexican-woman-in-the-city-in-elegant-clothes-highly-0c9db132-7b75-444b-9aa5-960ee3c61181-256x256.png" alt="">
+                            <img src="assets/images/background3.jpg" alt="">
                         </div>
                         <div class="col">
                             <div class="iconfont-wrapper">
@@ -153,7 +153,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="shadow">
                     <div class="row people">
                         <div class="wrap-img col-auto">
-                            <img src="assets/images/alkonmafio-mexican-man-in-town-in-fancy-clothes-highly-detailed-1bcab62a-13cd-410a-a8c0-2cea8365a65f-256x256.png" alt="" class="logo">
+                            <img src="assets/images/background1.jpg" alt="" class="logo">
                         </div>
                         <div class="col">
                             <div class="iconfont-wrapper">
