create github pages

--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="title-wrapper align-left">
                     <div class="line"></div>
                     <h3 class="mbr-section-title mbr-white mbr-semibold pb-2 mbr-fonts-style display-2">Llámanos al
-<div>+1 917 231 0260</div></h3>
+<div>+1 619 209 8953</div></h3>
                     <p class="mbr-text mbr-white mbr-regular mbr-fonts-style display-7">Y le mostraremos los secretos que usa la élite mundial para el éxito.</p>
                 </div>
             </div>
             <div class="col-lg-4 btn-col col-md-5 md-pb">
-                <div class="mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="tel:19172310260"><span class="mobi-mbri mobi-mbri-phone mbr-iconfont mbr-iconfont-btn"></span>LLAMAR</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="tel:16192098953"><span class="mobi-mbri mobi-mbri-phone mbr-iconfont mbr-iconfont-btn"></span>LLAMAR</a></div>
             </div>
         </div>
     </div>
@@ -129,7 +129,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="shadow">
                     <div class="row people">
                         <div class="wrap-img col-auto">
-                            <img src="assets/images/background3.jpg" alt="">
+                            <img src="assets/images/t1-256x256.png" alt="">
                         </div>
                         <div class="col">
                             <div class="iconfont-wrapper">
@@ -153,7 +153,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="shadow">
                     <div class="row people">
                         <div class="wrap-img col-auto">
-                            <img src="assets/images/background1.jpg" alt="" class="logo">
+                            <img src="assets/images/t2-256x256.png" alt="" class="logo">
                         </div>
                         <div class="col">
                             <div class="iconfont-wrapper">
